fix bug of overlap shift.

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
 	float:left;
 	width:600px;
 	height:700px;
-	margin-left:10px;
-	margin-top:10px;
+	margin:0px;
+	margin:0px;
 	background-color:#FFEC8B;
 	background:url("http://free-texture.net/wp-content/uploads/Brass-HairLine1.jpg");
 	overflow:hidden;
@@ -222,3 +222,9 @@ a:hover {
 	
 }
 
+#dwlink {
+	position:absolute;
+	z-index:10;
+	left: 10px;
+	bottom:10px;
+}
